# cmsdijet

./: .clang-format  .gitignore  BaseAnalysis.h  BaseHistoManager.h  BaseJet.cc  BaseJet.h  BaseReader.cc  BaseReader.h  BaseTrack.cc  BaseTrack.h  CMakeLists.txt  CmakeLists.txt  Collections.h  DiJetAnalysis.cc  DiJetAnalysis.h  Event.cc  Event.h  EventCut.cc  EventCut.h  ForestAODReader.cc  ForestAODReader.h  ForestReader.cc  ForestReader.h  ForestminiAODReader.cc  ForestminiAODReader.h  GenJet.cc  GenJet.h  GenTrack.cc  GenTrack.h  HistoManagerDiJet.cc  HistoManagerDiJet.h  HistoManagerJetESR.cc  HistoManagerJetESR.h  JetCorrector.cc  JetCorrector.h  JetCut.cc  JetCut.h  JetESRAnalysis.cc  JetESRAnalysis.h  JetEnergyScale.h  (+26 more)
PbPb_TrackingEfficiencies/: ._2018PbPb_Efficiency_GeneralTracks_MB.root  ._2018PbPb_Efficiency_GeneralTracks_MB_Loose.root  ._2018PbPb_Efficiency_GeneralTracks_MB_Tight.root  ._2018PbPb_Efficiency_GeneralTracks_highPt.root  ._2018PbPb_Efficiency_GeneralTracks_highPt_Loose.root  ._2018PbPb_Efficiency_GeneralTracks_highPt_Tight.root  ._2018PbPb_Efficiency_PixelTracks.root  trackingEfficiency2018PbPb.h
aux_files/PbPb_5020/JEC/: Autumn18_HI_V8_DATA_L2L3Residual_AK8PF.txt  Autumn18_HI_V8_DATA_L2Relative_AK2PF.txt  Autumn18_HI_V8_DATA_L2Relative_AK3PF.txt  Autumn18_HI_V8_DATA_L2Relative_AK4Calo.txt  Autumn18_HI_V8_DATA_L2Relative_AK4PF.txt  Autumn18_HI_V8_DATA_L2Relative_AK6PF.txt  Autumn18_HI_V8_DATA_L2Residual_AK3PF.txt  Autumn18_HI_V8_DATA_L3Absolute_AK8PFPuppi.txt  Autumn18_HI_V8_DATA_UncertaintySources_AK2PF.txt  Autumn18_HI_V8_DATA_UncertaintySources_AK3PF.txt  Autumn18_HI_V8_DATA_UncertaintySources_AK5PF.txt  Autumn18_HI_V8_DATA_UncertaintySources_AK6PF.txt  Autumn18_HI_V8_DATA_Uncertainty_AK3PF.txt  Autumn18_HI_V8_DATA_Uncertainty_AK4Calo.txt  Autumn18_HI_V8_DATA_Uncertainty_AK5PF.txt  Autumn18_HI_V8_MC_L1FastJet_AK8PF.txt  Autumn18_HI_V8_MC_L2Relative_AK3Calo.txt  Autumn18_HI_V8_MC_L2Relative_AK5PF.txt  Autumn18_HI_V8_MC_UncertaintySources_AK3Calo.txt  Autumn18_HI_V8_MC_Uncertainty_AK2PF.txt  Autumn18_HI_V8_MC_Uncertainty_AK3Calo.txt  Autumn18_HI_V8_MC_Uncertainty_AK4PFPuppi.txt  Autumn18_HI_V8_MC_Uncertainty_AK6PF.txt
aux_files/PbPb_5020/Multiplicity_Weight/: mult_weight_1p0.root
aux_files/pPb_8160/Dijet_Weight/: DJW.root  DJWEPOS.root  DJW_RefSwap.root  Dener_DJW.root  DijetWeight.root  DijetWeight10.root  DijetWeight100.root  DijetWeight10_New.root  DijetWeight50.root  DijetWeightRef.root
aux_files/pPb_8160/JEC/: Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK3Calo.txt  Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK3PF.txt  Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK3PFchs.txt  Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK4Calo.txt  Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK4PF.txt  Autumn16_HI_pPb_Pbgoing_Embedded_MC_L2Relative_AK4PFchs.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK3Calo.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK3PF.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK3PFchs.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK4Calo.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK4PF.txt  Autumn16_HI_pPb_Pbgoing_Unembedded_MC_L2Relative_AK4PFchs.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK3Calo.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK3PF.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK3PFchs.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK4Calo.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK4PF.txt  Autumn16_HI_pPb_pgoing_Embedded_MC_L2Relative_AK4PFchs.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK3Calo.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK3PF.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK3PFchs.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK4Calo.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK4PF.txt  Autumn16_HI_pPb_pgoing_Unembedded_MC_L2Relative_AK4PFchs.txt  Summer16_23Sep2016HV4_DATA_L2L3Residual_AK4JPT.txt  Summer16_23Sep2016HV4_DATA_Uncertainty_AK4JPT.txt
aux_files/pPb_8160/mult_weight_table/: Mult_Weight_pPb.root  Mult_Weight_pPb_Reco.root  Mult_Weight_pPb_Reco_DJ.root  Mult_Weight_pPb_Reco_NoDJ.root
aux_files/pPb_8160/trk_eff_table/: pPb_EPOS_2D_efftables.root
aux_files/pp_5020/Dijet_Weight/: PYTHIA_DiJetWeight_Table.root
aux_files/pp_5020/JEC/: Spring18_ppRef5TeV_V6_DATA_L2L3Residual_AK6PF.txt  Spring18_ppRef5TeV_V6_DATA_L2Relative_AK2PF.txt  Spring18_ppRef5TeV_V6_DATA_L2Relative_AK4Calo.txt  Spring18_ppRef5TeV_V6_DATA_L2Relative_AK6PF.txt  (+17 more)
crabSetUp/: crabConfig_DijetAnaOO.py  run_DijetAnaOO.sh  setup_env.sh
executions_dir/: pPbDijetAna
interface/: AxisRegistry.h  BaseAnalysis.h  CanvasBuilder.h  DataExtractor.h  DiJetAnalysis.h  Event.h  ForestReader.h  GenTrack.h  HistNormalizer.h  HistReader.h  HistoManagerDiJet.h  JetCorrector.h  JetCut.h  JetEnergyScale.h  LinkDef.h  StyleFormatter.h  Track.h  Unfolding.h  common.hpp
macro/: drawJetAnalysisFigs.C  extractFigures.C
macros/: RunPlotter.C  unfolding.C
pPb_TrackingEfficiency/: TrkEfficiency2016pPb.h
paths/: emb.list  oo_output.root  oolist.txt  pPbtest.root  pPbtest1.root  pPbtestpbgoing.root  pPbtestpgoing.root  pbaod.txt  pbpbfile.list  unemb.list
processing/: MC_embedded_Pbgoing_submission_nopthatcut.sub  MC_embedded_pgoing_submission_nopthatcut.sub  MC_unembedded_Pbgoing_submission_nopthatcut.sub  MC_unembedded_pgoing_submission_nopthatcut.sub  ahingraj.cc  cleanup.sh  list.sh  run_DijetAnaOO.sh  run_DijetAnaPbPb.sh  run_DijetAnapPb.sh  run_DijetAnapp.sh  split_files.sh  submit_OO.sh  submit_pPb.sh  submit_pbpb.sh  submit_pp.sh  sum_files.sh
processing/cond/: pthat280_emb_pgoing_nocut.err  pthat30_unemb_Pbgoing_nocut.err
src/: BaseJet.cc  BaseReader.cc  BaseTrack.cc  DiJetAnalysis.cc  Event.cc  EventCut.cc  ForestReader.cc  GenJet.cc  GenTrack.cc  HistoManagerDiJet.cc  JetCorrector.cc  JetCut.cc  JetEnergyScale.cc  JetUncertainty.cc  Manager.cc  OODijetAna.cxx  PbPbDijetAna.cxx  RecoJet.cc  Track.cc  TrackCut.cc  Unfolding.cc  pPbDijetAna.cxx  ppDijetAna.cxx  unfoldingAna.cxx
(+1 files in other folders)
